app/styles/_general.scss
body {
  margin: 0;
  padding: 0;
  background-color: #111;
  background-size: 11px;
  background-attachment: fixed;
  text-align: center;
  font-family: $sans-serif;
  font-weight: 300;
  color: #fff;
  // Eliminate gray tap highlight on iOS
  -webkit-tap-highlight-color: transparent;
}
main {
  display: block;
}
#app {
  text-align: center;
  h1 {
    margin-top: 30px;
  }
}
h1, h2, h3 {
  font-weight: 400;
}
a {
  color: #6c8;
}
.nav-link {
  position: absolute;
  top: 12px;
  font-size: 14px;
  $position-x: 16px;
  &-left {
    left: $position-x;
  }
  &-right {
    right: $position-x;
  }
  a {
    text-decoration: none;
  }
}

input[type='text'] {
  border-width: 0;
  border-radius: 3px;
  padding: 4px 8px;
  background-clip: padding-box;
  text-align: center;
  font-family: $monospace;
  font-size: 16px;
  $input-box-shadow: 0 1px 3px 1px #000;
  box-shadow: $input-box-shadow;
  &:focus {
    outline-width: 0;
    border-color: #f63;
    background-color: #ffe;
    box-shadow: 0 0 5px 1px #f96, $input-box-shadow;
  }
}

// A general-purpose container that fits to the viewport width but is
// horizontally scrollable
.scrollable-container {
  padding: 5px 0;
  overflow-x: auto;
  -webkit-overflow-scrolling: touch;
}

